--- a/css/backtoTop.css
+++ b/css/backtoTop.css
@@ -2,8 +2,8 @@
 .backToTop {
     width: 50px;
     height: 50px;
-    background: #f55f8d;
-    border-radius: 8px;
+    background: #F7941E;
+    border-radius: 50%;
     line-height: 50px;
     text-align: center;
     display: block;
