--- a/css/base.css
+++ b/css/base.css
@@ -154,6 +154,14 @@ h1, h2, h3, h4, h5, h6 {
     white-space: nowrap;
 }
 
+.header-pinned {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    transition: all .5s;
+}
+
 /***********.bg-[name] *************/
 .bg-background {
     background-color: var(--background) !important;
@@ -334,6 +342,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .border-secondary {
     border: 1px solid var(--secondary) !important;
+}
+
+.border-destructive {
+    border: 1px solid var(--destructive) !important;
 }
 
 /*********** amim  *********/
