--- a/css/blog.css
+++ b/css/blog.css
@@ -2,3 +2,13 @@
     transition: all .5s;
     color: var(--secondary);
 }
+
+.content .pagination li:hover {
+    transition: all .5s;
+    background: var(--secondary);
+}
+
+.content .pagination li:hover a {
+    transition: all .5s;
+    color: #fff;
+}
