--- a/css/base.css
+++ b/css/base.css
@@ -162,6 +162,22 @@ h1, h2, h3, h4, h5, h6 {
     transition: all .5s;
 }
 
+.wow {
+    animation-duration: 1.2s !important;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translate3d(0, 20%, 0);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
 /***********.bg-[name] *************/
 .bg-background {
     background-color: var(--background) !important;
